// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loading with an a size xl where width equals to 30px should match snapshot 1`] = `
<div
  className="sc-beqWaB cNwUwV"
  display="flex"
>
  <svg
    fill="none"
    height="30px"
    stroke="rgba(158, 158, 158, 1)"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="2"
    style={
      Object {
        "transform": "rotate(0deg)",
      }
    }
    viewBox="0 0 24 24"
    width="30px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <g
      id="SVGRepo_bgCarrier"
      strokeWidth="0"
    />
    <g
      id="SVGRepo_tracerCarrier"
      strokeLinecap="round"
      strokeLinejoin="round"
    />
    <g
      id="SVGRepo_iconCarrier"
    >
      <path
        d="M21 12a9 9 0 11-6.219-8.56"
      />
    </g>
  </svg>
  <div
    className="sc-beqWaB cJjaUv"
  >
    Delete
  </div>
</div>
`;

exports[`Loading with loader color equals to primary(rgba(249, 115, 22, 1)) should match snapshot 1`] = `
<div
  className="sc-beqWaB cNwUwV"
  display="flex"
>
  <svg
    fill="none"
    height="22px"
    stroke="rgba(249, 115, 22, 1)"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="2"
    style={
      Object {
        "transform": "rotate(0deg)",
      }
    }
    viewBox="0 0 24 24"
    width="22px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <g
      id="SVGRepo_bgCarrier"
      strokeWidth="0"
    />
    <g
      id="SVGRepo_tracerCarrier"
      strokeLinecap="round"
      strokeLinejoin="round"
    />
    <g
      id="SVGRepo_iconCarrier"
    >
      <path
        d="M21 12a9 9 0 11-6.219-8.56"
      />
    </g>
  </svg>
  <div
    className="sc-beqWaB cJjaUv"
  >
    Loading
  </div>
</div>
`;

exports[`Loading with text color equals to primary(rgba(249, 115, 22, 1)) should match snapshot 1`] = `
<div
  className="sc-beqWaB cNwUwV"
  display="flex"
>
  <svg
    fill="none"
    height="22px"
    stroke="rgba(158, 158, 158, 1)"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="2"
    style={
      Object {
        "transform": "rotate(0deg)",
      }
    }
    viewBox="0 0 24 24"
    width="22px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <g
      id="SVGRepo_bgCarrier"
      strokeWidth="0"
    />
    <g
      id="SVGRepo_tracerCarrier"
      strokeLinecap="round"
      strokeLinejoin="round"
    />
    <g
      id="SVGRepo_iconCarrier"
    >
      <path
        d="M21 12a9 9 0 11-6.219-8.56"
      />
    </g>
  </svg>
  <div
    className="sc-beqWaB dTaahr"
    color="primary"
  >
    Loading
  </div>
</div>
`;

exports[`Loading with text position bottom should match snapshot 1`] = `
<div
  className="sc-beqWaB frdrPx"
  display="flex"
>
  <svg
    fill="none"
    height="22px"
    stroke="rgba(158, 158, 158, 1)"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="2"
    style={
      Object {
        "transform": "rotate(0deg)",
      }
    }
    viewBox="0 0 24 24"
    width="22px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <g
      id="SVGRepo_bgCarrier"
      strokeWidth="0"
    />
    <g
      id="SVGRepo_tracerCarrier"
      strokeLinecap="round"
      strokeLinejoin="round"
    />
    <g
      id="SVGRepo_iconCarrier"
    >
      <path
        d="M21 12a9 9 0 11-6.219-8.56"
      />
    </g>
  </svg>
  <div
    className="sc-beqWaB cJjaUv"
  >
    Loading
  </div>
</div>
`;
